.config/waybar/style.css
@import "./colors.css";

* {
  background: transparent;
  font-family: "JetBrainsMono Nerd Font";
  font-size: 12px;
  color: white;
  margin: 0px 0px 0px 0px;
}

window {
  background: transparent;
  border-radius: 10px;
}

#tray menu,
tooltip {
  background: @background;
  color: @active;
  border-radius: 10px;
}

#scroll,
#clock,
#hardware,
#scripts,
#custom-weather,
#custom-timer,
#backlight,
#batteries,
#battery,
#pulseaudio,
#pulseaudio#mic,
#workspaces,
#custom-notification,
#memory,
#tray {
  background: alpha(@background, 0.8);
  border-radius: 8px;
  padding: 1px;
  margin-right: 1px;
}

#tray {
  padding: 0px 8px 0px 8px;
}

#workspaces button {
  padding: 0px;
  margin: 0;
  border-radius: 0;
  color: shade(@background, 0.8);
}

#workspaces button.urgent {
  text-decoration: underline;
  font-weight: bold;
}

#workspaces button.active {
  background: shade(alpha(@foreground, 0.2), 0.8);
  color: shade(@foreground, 0.9);
  border-radius: 8px;
}

#cpu,
#clock,
#network,
#custom-cputemp,
#custom-colorpicker,
#hyprland-submap,
#idle_inhibitor,
#custom-updates,
#gamemode,
#custom-github,
#custom-camera,
#custom-notifications,
#custom-recorder,
#custom-batterysaver,
#bluetooth,
#disk,
#memory,
#pulseaudio,
#pulseaudio.mic,
#backlight {
  padding: 0px 6px 0px 6px;
}

#idle_inhibitor,
#pulseaudio,
#pulseaudio.mic {
  color: #7aa2f7;
}

#backlight {
  color: #fab387;
}

#memory {
  color: shade(#cca0e4, 0.8);
}

#disk {
  color: shade(#7aa2f7, 0.8);
}

#cpu {
  color: shade(#a6e3a1, 0.8);
}

#custom-batterysaver.powersave {
  color: #a6e3a1;
}

#custom-batterysaver.default {
  color: @foreground;
}

#custom-batterysaver.performance {
  color: #d78787;
}

#network {
  color: #a6e3a1;
}

#network.disabled,
#network.disconnected {
  color: #d78787;
}

@keyframes blink {
  to {
    background-color: alpha(red, 0.6);
    color: @foreground;
  }
}

@keyframes blink-blue {
  to {
    background-color: alpha(#7aa2f7, 0.6);
    color: @foreground;
  }
}

#battery.warning:not(.charging),
#battery.critical:not(.charging) {
  animation-name: blink;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#bluetooth.discoverable,
#bluetooth.discovering,
#bluetooth.pairable {
  animation-name: blink-blue;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#bluetooth.connected {
  background: shade(alpha(@foreground, 0.1), 0.8);
  border-radius: 8px;
}

/* Override */

#batteries {
  margin-right: 0px;
  border-radius: 8px 0px 0px 8px;
}

#custom-timer.active {
  background-color: shade(@red, 0.7);
}

